fixed spacing in summary and correct color

--- a/style.css
+++ b/style.css
@@ -17,10 +17,10 @@ body {
 }
 
 .result {
-    background-color: hsl(252, 100%, 67%);
+    background-image: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
     border-radius: 0 0 20px 20px;
     color: hsl(0, 0%, 100%);
-    min-height: 45vh;
+    min-height: 42.5vh;
     padding: 0 3rem;
 }
 
@@ -28,16 +28,37 @@ body {
 
 
 .summ1 , .summ2, .summ3 , .summ4{
-    background-color: #f0ede9;
     border-radius: 0.5rem;
     width: 19rem;
-    height: 2.7rem;
+    height: 3.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 1.5rem;
+    font-weight: 700;
     
 }
+
+.summ1 {
+    color: hsl(0, 100%, 67%);
+    background-color: hsl(0, 100%, 67%, 0.1);
+}
+
+.summ2 {
+    color: hsl(39, 100%, 56%);
+    background-color: hsl(39, 100%, 56%, 0.1);
+}
+
+.summ3 {
+    color: hsl(166, 100%, 37%);
+    background-color: hsl(166, 100%, 37%, 0.1);
+}
+
+.summ4 {
+    color: hsl(234, 85%, 45%);
+    background-color: hsl(234, 85%, 45%, 0.1);
+}
+
 
 h1 {
     margin-top: 3rem;
@@ -51,6 +72,14 @@ h2 {
 .summary h2 {
     margin: 1.5rem 13rem 1.5rem 0;
     font-size: 1.2rem;
+}
+
+span {
+    margin-left: 8.5rem;
+}
+
+img {
+    margin-right: 0.4rem;
 }
 
 
